--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <canvas class="webgl"></canvas>
+    <nav>
+      <a href="/">Sphere</a>
+      <ul>
+        <li>Explore</li>
+        <li>Create</li>
+      </ul>
+    </nav>
+    <h1 class="title">Give it a spin!</h1>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
