Responsive design and finishing
Responsive design and finishing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3D Ball Effects</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -10,10 +10,10 @@
   <body>
     <canvas class="webgl"></canvas>
     <nav>
-      <a href="/">Sphere</a>
+      <a href="/" class="pop">Sphere</a>
       <ul>
-        <li>Explore</li>
-        <li>Create</li>
+        <li><a href="https://github.com/mikeleo03">Explore</a></li>
+        <li><a href="https://threejs.org/">Create</a></li>
       </ul>
     </nav>
     <h1 class="title">Give it a spin!</h1>
